--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "javascript-development-environment",
   "version": "1.0.0",
   "description": "JavaScript development environment",
-  "scripts": {},
+  "scripts": {
+    "prestart":"babel-node buildScripts/startMessage.js",
+    "start": "npm-run-all --parallel security-check open:src",
+    "security-check": "nsp check", 
+    "open:src": "babel-node buildScripts/srcServer.js",
+    "localtunnel": "lt --port 3000",
+    "share": "npm-run-all --parallel open:src localtunnel "
+  },
   "author": "dxanh",
   "license": "MIT",
   "dependencies": {
