--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "JavaScript development environment",
   "scripts": {
-    "prestart":"babel-node buildScripts/startMessage.js",
+    "prestart": "babel-node buildScripts/startMessage.js",
     "start": "npm-run-all --parallel security-check open:src",
-    "security-check": "nsp check", 
     "open:src": "babel-node buildScripts/srcServer.js",
+    "security-check": "nsp check",
     "localtunnel": "lt --port 3000",
-    "share": "npm-run-all --parallel open:src localtunnel "
+    "share": "npm-run-all --parallel open:src localtunnel"
   },
   "author": "dxanh",
   "license": "MIT",
@@ -24,29 +24,29 @@
     "chai": "3.5.0",
     "chalk": "1.1.3",
     "cheerio": "0.22.0",
-    "compression": "^1.7.4",
+    "compression": "1.6.2",
     "cross-env": "3.1.3",
-    "css-loader": "^3.4.2",
+    "css-loader": "0.25.0",
     "eslint": "3.8.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-watch": "^6.0.1",
-    "express": "^4.17.1",
+    "eslint-plugin-import": "2.0.1",
+    "eslint-watch": "2.1.14",
+    "express": "4.14.0",
     "extract-text-webpack-plugin": "1.0.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "2.22.0",
     "jsdom": "9.8.0",
-    "json-schema-faker": "^0.4.7",
-    "json-server": "^0.16.0",
-    "localtunnel": "^2.0.0",
-    "mocha": "^7.0.1",
-    "nock": "^12.0.0",
+    "json-schema-faker": "0.3.6",
+    "json-server": "0.8.22",
+    "localtunnel": "1.8.1",
+    "mocha": "3.1.2",
+    "nock": "8.1.0",
     "npm-run-all": "3.1.1",
     "nsp": "2.6.2",
     "numeral": "1.5.3",
-    "open": "^7.0.2",
+    "open": "0.0.5",
     "rimraf": "2.5.4",
     "style-loader": "0.13.1",
-    "surge": "0.20.4",
-    "webpack": "^4.41.6",
+    "surge": "0.18.0",
+    "webpack": "1.13.2",
     "webpack-dev-middleware": "1.8.4",
     "webpack-hot-middleware": "2.13.0",
     "webpack-md5-hash": "0.0.5"
